--- a/src/style.css
+++ b/src/style.css
@@ -228,14 +228,14 @@ body {
 
 .table-overlay {
   position: absolute;   
-  bottom: 60%;
-  left: 0;
+  bottom: 120%;
+  left: 3%;
   width: 100%;            
   height: 100%;            
   object-fit: contain;     
   pointer-events: none;    
   image-rendering: pixelated;
-  transform: scale(3.1); 
+  transform: scale(3); 
 }
 
 
